fix(core-hn): tab-bar now looks correct on iOS

--- a/src/components/core-hn/main.scss
+++ b/src/components/core-hn/main.scss
@@ -101,3 +101,7 @@ ion-footer ion-toolbar {
   float: left;
   margin-left: 10px;
 }
+
+ion-toolbar.toolbar-ios .ionic-icon {
+  margin-right: 10px;
+}
